--- a/index.html
+++ b/index.html
@@ -170,7 +170,9 @@ permalink: /
         <br><h2 class="mb20" style="color:#ffffff; font-size: 150%;">Conoce los beneficios que puede disfrutar tu empresa con un sitio de comercio electrónico y por qué al no tener uno está perdiendo a sus mejores clientes</h2><br>
       <!--<p>.</p>-->
         <div class="probootstrap-link-wrap">
+          <div class=" row">
           <p><a href="https://mailchi.mp/917b21d80251/amsoftware_subscribir" role="button" class="btn btn-primary">Descargar</a></p>
+        </div>
         </div>
       </div>
 </div>
@@ -290,7 +292,9 @@ permalink: /
         <br><h2 class="mb20" style="color:#ffffff; font-size: 150%;">Aprende más sobre lo que significa tener una prescencia en línea y entérate por qué en el año 2019 si una empresa no tiene un sitio web, está literalmente muerta.</h2><br>
       <!--<p>.</p>-->
         <div class="probootstrap-link-wrap">
+          <div class="row">
           <p><a href="https://mailchi.mp/917b21d80251/amsoftware_subscribir" role="button" class="btn btn-primary">Descargar</a></p>
+        </div>
         </div>
       </div>
     </div>
@@ -896,7 +900,9 @@ permalink: /
         <br><h2 class="mb20" style="color:#ffffff; font-size: 150%;">Conoce los beneficios que puede disfrutar tu empresa con un sitio de comercio electrónico y por qué al no tener uno está perdiendo a sus mejores clientes</h2><br>
       <!--<p>.</p>-->
         <div class="probootstrap-link-wrap">
-          <p><a href="#" role="button" class="btn btn-primary">Descargar</a></p>
+          <div class="row">
+            <p><a href="https://mailchi.mp/917b21d80251/amsoftware_subscribir" role="button" class="btn btn-primary">Descargar</a></p>
+          </div>
         </div>
       </div>
 </div>
