--- a/index.html
+++ b/index.html
@@ -165,7 +165,9 @@ permalink: /
 <div class="container">
         <div class="probootstrap-cta probootstrap-animate">
           <center>
-            <img style="height:420px;width:auto;" src="img/sprites/c1.png">
+            <div class="row">
+              <img style="height:420px;width:auto;" src="img/sprites/c1.png">
+            </div>
           </center>
         <br><h2 class="mb20" style="color:#ffffff; font-size: 150%;">Conoce los beneficios que puede disfrutar tu empresa con un sitio de comercio electrónico y por qué al no tener uno está perdiendo a sus mejores clientes</h2><br>
       <!--<p>.</p>-->
@@ -286,8 +288,11 @@ permalink: /
   <!-- END section cta -->
       <div class="container">
         <div class="probootstrap-cta probootstrap-animate">
-          <center>
+          
+            <center>
+              <div class="row">
             <img style="height:420px;width:auto;" src="img/sprites/c2.png">
+          </div>
           </center>
         <br><h2 class="mb20" style="color:#ffffff; font-size: 150%;">Aprende más sobre lo que significa tener una prescencia en línea y entérate por qué en el año 2019 si una empresa no tiene un sitio web, está literalmente muerta.</h2><br>
       <!--<p>.</p>-->
@@ -895,7 +900,9 @@ permalink: /
 <div class="container">
         <div class="probootstrap-cta probootstrap-animate">
           <center>
+            <div class="row">
             <img style="height:420px;width:auto;" src="img/sprites/c1.png">
+            </div>
           </center>
         <br><h2 class="mb20" style="color:#ffffff; font-size: 150%;">Conoce los beneficios que puede disfrutar tu empresa con un sitio de comercio electrónico y por qué al no tener uno está perdiendo a sus mejores clientes</h2><br>
       <!--<p>.</p>-->
