--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ permalink: /
         <div class="probootstrap-cta probootstrap-animate">
           <center>
             <div class="row">
-              <img style="height:420px;width:100%;" src="img/sprites/c1.png">
+              <img style="height:420px;max-width:100%;" src="img/sprites/c1.png">
             </div>
           </center>
         <br><h2 class="mb20" style="color:#ffffff; font-size: 150%;">Conoce los beneficios que puede disfrutar tu empresa con un sitio de comercio electrónico y por qué al no tener uno está perdiendo a sus mejores clientes</h2><br>
@@ -291,7 +291,7 @@ permalink: /
           
             <center>
               <div class="row">
-            <img style="height:420px;width:100%;" src="img/sprites/c2.png">
+            <img style="height:420px;max-width:100%;" src="img/sprites/c2.png">
           </div>
           </center>
         <br><h2 class="mb20" style="color:#ffffff; font-size: 150%;">Aprende más sobre lo que significa tener una prescencia en línea y entérate por qué en el año 2019 si una empresa no tiene un sitio web, está literalmente muerta.</h2><br>
@@ -901,7 +901,7 @@ permalink: /
         <div class="probootstrap-cta probootstrap-animate">
           <center>
             <div class="row">
-            <img style="height:420px;width:100%;" src="img/sprites/c1.png">
+            <img style="height:420px;max-width:100%;" src="img/sprites/c1.png">
             </div>
           </center>
         <br><h2 class="mb20" style="color:#ffffff; font-size: 150%;">Conoce los beneficios que puede disfrutar tu empresa con un sitio de comercio electrónico y por qué al no tener uno está perdiendo a sus mejores clientes</h2><br>
