--- a/about.html
+++ b/about.html
@@ -286,7 +286,7 @@ permalink: /nosotros
 <div class="container">
  <div class="probootstrap-cta probootstrap-animate">
           <center>
-            <img style="height:420px;width:auto;" src="img/sprites/c1.png">
+            <img style="height:420px;max-width:100%;" src="img/sprites/c1.png">
           </center>
         <br><h2 class="mb20" style="color:#ffffff; font-size: 150%;">Conoce los beneficios que puede disfrutar tu empresa con un sitio de comercio electrónico y por qué al no tener uno está perdiendo a sus mejores clientes</h2><br>
       <!--<p>.</p>-->
@@ -297,7 +297,7 @@ permalink: /nosotros
 
         <div class="probootstrap-cta probootstrap-animate">
           <center>
-            <img style="height:420px;width:auto;" src="img/sprites/c2.png">
+            <img style="height:420px;max-width:100%;" src="img/sprites/c2.png">
           </center>
         <br><h2 class="mb20" style="color:#ffffff; font-size: 150%;">Aprende más sobre lo que significa tener una prescencia en línea y entérate por qué en el año 2019 si una empresa no tiene un sitio web, está literalmente muerta.</h2><br>
       <!--<p>.</p>-->
