--- a/web.html
+++ b/web.html
@@ -267,7 +267,7 @@ permalink: /web
 <div class="container">
         <div class="probootstrap-cta probootstrap-animate">
           <center>
-            <img style="height:420px;width:auto;" src="img/sprites/c2.png">
+            <img style="height:420px;max-width:100%;" src="img/sprites/c2.png">
           </center>
         <br><h2 class="mb20" style="color:#ffffff; font-size: 150%;">Aprende más sobre lo que significa tener una prescencia en línea y entérate por qué en el año 2019 si una empresa no tiene un sitio web, está literalmente muerta.</h2><br>
       <!--<p>.</p>-->
