--- a/branding.html
+++ b/branding.html
@@ -39,10 +39,12 @@ permalink: /branding
 
             
             <div class="text">
-
+              <div class="icon">
               <i class="icon-stats-dots"></i>
-            
-              <h3 class="heading">Estrategias Creativas y Publicitarias</h3><hr>
+            </div>
+            <div>
+              <h3 class="heading">Estrategias Creativas y Publicitarias</h3>
+            </div><hr>
               <p>Generación de estrategias creativas y publicitarias en base a las necesidades del cliente.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
