--- a/branding.html
+++ b/branding.html
@@ -39,7 +39,7 @@ permalink: /branding
 
             
             <div class="text">
-              <div class="icon">
+              <div class="icon" style="padding-right: 25px;">
               <i class="icon-stats-dots"></i>
             </div>
             <div>
