--- a/branding.html
+++ b/branding.html
@@ -39,12 +39,13 @@ permalink: /branding
 
             
             <div class="text">
-              <div class="icon" style="padding-right: 25px;">
+              <div class="icon">
               <i class="icon-stats-dots"></i>
             </div>
-            <div>
+            <div class="text">
               <h3 class="heading">Estrategias Creativas y Publicitarias</h3>
-            </div><hr>
+            </div>
+            <hr>
               <p>Generación de estrategias creativas y publicitarias en base a las necesidades del cliente.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
