--- a/branding.html
+++ b/branding.html
@@ -58,7 +58,7 @@ permalink: /branding
               <div class="icon">
               <i class="icon-office"></i>
             </div>
-            <div class="text"
+            <div class="text">
               <h3 class="heading">Creación de Identidad e Imagen Corporativa</h3>
             </div>
             <hr>
