--- a/branding.html
+++ b/branding.html
@@ -150,7 +150,7 @@ permalink: /branding
            
             <div class="text">
               <div class="icon">
-              <i class="icon-share"></i>
+              <i class="icon-mic"></i>
             </div>
             <div class="text">
               <h3 class="heading">Spots Publicitarios (Audio/Video)</h3></div><hr>
