--- a/ecommerce.html
+++ b/ecommerce.html
@@ -42,6 +42,7 @@ permalink: /ecommerce
               <div class="icon">
               <i class="icon-cart"></i>
             </div>
+            <div class="text">
               <h3 class="heading">Catálogo Virtual Especializado de Productos y Servicios</h3></div><hr>
               <p>Muestre sus productos o servicios en su sitio web o aplicación móvil, permitiéndole a sus clientes comprar con la mayor conveniencia desde la comodidad de su hogar.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
