--- a/software.html
+++ b/software.html
@@ -149,7 +149,7 @@ permalink: /software
               <i class="icon-bubbles3"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Sistemas de Atención al Cliente</h3><hr>
+              <h3 class="heading">Sistemas de Atención al Cliente</h3></div><hr>
               <p>Creamos software interactivo y servicios basados en el cliente que brindan una experiencia de satisfacción inigualable para sus clientes y  aumentan sus tasas de conversión ayudando a resolver problemas relacionados con los clientes de manera rápida y eficiente.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
