--- a/web.html
+++ b/web.html
@@ -1,5 +1,5 @@
 ---
-layout: page
+layout: page_es
 title: AM Software | Web
 permalink: /web
 ---
@@ -34,12 +34,12 @@ permalink: /web
       <div class="row">
         <div class="col-md-4">
           <div class="service left-icon probootstrap-animate">
-
+            <div class="text">
             <div class="icon">
               <i class="icon-file-text"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Sitios de Una Página</h3><hr>
+              <h3 class="heading">Sitios de Una Página</h3></div><hr>
               <p>Ideales para negocios pequeños, curriculum vitae profesionales, portafolios, artistas, grupos musicales, eventos, educadores, proyectos, provedores de servicios, y más.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
@@ -48,11 +48,11 @@ permalink: /web
         </div>
         <div class="col-md-4">
           <div class="service left-icon probootstrap-animate">
-            <div class="icon">
+            <div class="text"><div class="icon">
               <i class="icon-menu"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Sitios Básicos</h3><hr>
+              <h3 class="heading">Sitios Básicos</h3></div><hr>
               <p>Dése a conocer con un sitio sencillo y profesional ajustado a su presupuesto que proporcione información importante sobre su empresa u organización al público.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
@@ -60,11 +60,11 @@ permalink: /web
         </div>
         <div class="col-md-4">
           <div class="service left-icon probootstrap-animate">
-            <div class="icon">
+            <div class="text"><div class="icon">
               <i class="icon-embed2"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Sitios Standard</h3><hr>
+              <h3 class="heading">Sitios Standard</h3></div><hr>
               <p>Dése a conocer de manera profesional, muestre información detallada sobre sus productos y servicios. Características modernas como mapas de ubicación, formularios de contacto, galerías interactivas y más. </p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
@@ -75,11 +75,11 @@ permalink: /web
         <div class="col-md-4">
           <div class="service left-icon probootstrap-animate">
 
-            <div class="icon">
+            <div class="text"><div class="icon">
               <i class="icon-lab"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Sitios <br> Avanzados</h3><hr>
+              <h3 class="heading">Sitios <br> Avanzados</h3></div><hr>
               <p>Sitios con funcionalidad avanzada. Bases de datos especializadas. Accesos de usuarios. Publique un blog dentro del sitio de su empresa para atraer nuevos clientes e interactuar con los existentes. Foros de discusión. Live streaming. Y más.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
@@ -88,11 +88,11 @@ permalink: /web
         </div>
         <div class="col-md-4">
           <div class="service left-icon probootstrap-animate">
-            <div class="icon">
+            <div class="text"><div class="icon">
               <i class="icon-cart"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Integración de E-Commerce</h3><hr>
+              <h3 class="heading">Integración de E-Commerce</h3></div><hr>
               <p>Sitios de comercio electrónico modernos y atractivos. Comienze a vender en línea, ya sea usted cuente con una tienda física o venda exclusivamente en línea, ofrezca sus productos y servicios directamente online en cualquier momento.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
@@ -100,11 +100,11 @@ permalink: /web
         </div>
         <div class="col-md-4">
           <div class="service left-icon probootstrap-animate">
-            <div class="icon">
+<div class="text"><div class="icon">
               <i class="icon-power-cord"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Integración de Aplicaciones Web</h3><hr>
+              <h3 class="heading">Integración de Aplicaciones Web</h3></div><hr>
               <p>Desarrollo e implementación de aplicaciones web de clase mundial que satisfacen sus necesidades y objetivos específicos.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
@@ -267,7 +267,7 @@ permalink: /web
 <div class="container">
         <div class="probootstrap-cta probootstrap-animate">
           <center>
-            <img style="height:420px;max-width:100%;" src="img/sprites/c2.png">
+            <img style="height:420px;width:auto;" src="img/sprites/c2.png">
           </center>
         <br><h2 class="mb20" style="color:#ffffff; font-size: 150%;">Aprende más sobre lo que significa tener una prescencia en línea y entérate por qué en el año 2019 si una empresa no tiene un sitio web, está literalmente muerta.</h2><br>
       <!--<p>.</p>-->
