--- a/software.html
+++ b/software.html
@@ -44,7 +44,7 @@ permalink: /software
               <i class="icon-display"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Aplicaciones Stand-Alone</h3><hr>
+              <h3 class="heading">Aplicaciones Stand-Alone</h3></div><hr>
               <p>Para empresas y compañías que requieren una aplicación centralizada, AM Software cuenta con un equipo dedicado con más de 10 años de experiencia en la creación y administración de aplicaciones usando diversas tecnologías.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
@@ -53,11 +53,12 @@ permalink: /software
         </div>
         <div class="col-md-4">
           <div class="service left-icon probootstrap-animate">
+<div class="text">
             <div class="icon">
               <i class="icon-laptop3"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Aplicaciones <br> Web</h3><hr>
+              <h3 class="heading">Aplicaciones <br> Web</h3></div><hr>
               <p>Independientemente de la industria; finanzas, automotriz, agroindustria, e-commerce, retail y muchas más, AM Software ha creado aplicaciones para clientes de todo el mundo. Creamos aplicaciones web con los más altos estándares y experiencia de usuario que además están destinadas incrementar su productividad y sus ganancias.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
@@ -65,11 +66,12 @@ permalink: /software
         </div>
         <div class="col-md-4">
           <div class="service left-icon probootstrap-animate">
+<div class="text">
             <div class="icon">
               <i class="icon-mobile3"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Aplicaciones <br> Móviles</h3><hr>
+              <h3 class="heading">Aplicaciones <br> Móviles</h3></div><hr>
               <p>Las aplicaciones móviles se han vuelto cruciales en el entorno comercial actual. En AM Software, creamos aplicaciones móviles de la más alta calidad que se adaptan perfectamente a los objetivos y necesidades de su negocio.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
@@ -84,7 +86,7 @@ permalink: /software
               <i class="icon-cloud"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Computación en la Nube</h3><hr>
+              <h3 class="heading">Computación en la Nube</h3></div><hr>
               <p>Ofrecemos servicios de computación en la nube seguros e ininterrumpidos con velocidad inigualable que garantizan que sus clientes experimenten un alto rendimiento constante y una experiencia placentera.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
@@ -93,11 +95,12 @@ permalink: /software
         </div>
         <div class="col-md-4">
           <div class="service left-icon probootstrap-animate">
+<div class="text">
             <div class="icon">
               <i class="icon-drive"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Servicios de Backup</h3><hr>
+              <h3 class="heading">Servicios de Backup</h3></div><hr>
               <p>Ofrecemos servicios de copia de seguridad eficientes y robustos para su negocio, para garantizar que esté en funcionamiento, incluso en el caso de una desafortunada pérdida de datos.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
@@ -105,11 +108,12 @@ permalink: /software
         </div>
         <div class="col-md-4">
           <div class="service left-icon probootstrap-animate">
+<div class="text">
             <div class="icon">
               <i class="icon-database"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Manejo de Datos</h3><hr>
+              <h3 class="heading">Manejo de Datos</h3></div><hr>
               <p>En AM Software, nuestro servicio de administración de datos permite a las organizaciones y empresas impulsar la innovación y rastrear el crecimiento al compartir, acceder y analizar datos sin inconvenientes.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
@@ -124,7 +128,7 @@ permalink: /software
               <i class="icon-stats-bars"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Sistemas <br> Empresariales</h3><hr>
+              <h3 class="heading">Sistemas <br> Empresariales</h3></div><hr>
               <p>Nuestras soluciones de software empresarial están orientadas a satisfacer las necesidades específicas de las organizaciones y empresas mediante un enfoque de desarrollo modular con el objetivo de aumentar la productividad e incrementar la tasa de conversión en cualquier industria.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
@@ -133,11 +137,12 @@ permalink: /software
         </div>
         <div class="col-md-4">
           <div class="service left-icon probootstrap-animate">
+<div class="text">
             <div class="icon">
               <i class="icon-bubbles3"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Sistemas de Atención al Cliente</h3><hr>
+              <h3 class="heading">Sistemas de Atención al Cliente</h3></div><hr>
               <p>Creamos software interactivo y servicios basados en el cliente que brindan una experiencia de satisfacción inigualable para sus clientes y  aumentan sus tasas de conversión ayudando a resolver problemas relacionados con los clientes de manera rápida y eficiente.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
@@ -145,11 +150,12 @@ permalink: /software
         </div>
         <div class="col-md-4">
           <div class="service left-icon probootstrap-animate">
+<div class="text">
             <div class="icon">
               <i class="icon-rocket"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Aplicaciones Interactivas</h3><hr>
+              <h3 class="heading">Aplicaciones Interactivas</h3></div><hr>
               <p>Diseñamos software interactivo y educativo que se puede utilizar para educar a clientes, personal y estudiantes en una gama más amplia de industrias, pero las posibilidades van más allá. Desde simulaciones hasta videojuegos, en AM Software no existen los límites.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
@@ -164,7 +170,7 @@ permalink: /software
               <i class="icon-upload3"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Modernización y Adaptación de Sistemas</h3><hr>
+              <h3 class="heading">Modernización y Adaptación de Sistemas</h3></div><hr>
               <p>Ofrecemos este servicio a compañías que buscan cambiar, modificar o actualizar sus procesos de software.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
@@ -173,11 +179,12 @@ permalink: /software
         </div>
         <div class="col-md-4">
           <div class="service left-icon probootstrap-animate">
+<div class="text">
             <div class="icon">
               <i class="icon-lifebuoy"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Soporte <br> Técnico</h3><hr>
+              <h3 class="heading">Soporte <br> Técnico</h3></div><hr>
               <p>Proporcionamos un servicio de soporte técnico integral y permanente para una amplia gama de empresas en diversas industrias.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
@@ -185,11 +192,12 @@ permalink: /software
         </div>
         <div class="col-md-4">
           <div class="service left-icon probootstrap-animate">
+<div class="text">
             <div class="icon">
               <i class="icon-terminal"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Administración de Sistemas</h3><hr>
+              <h3 class="heading">Administración de Sistemas</h3></div><hr>
               <p>Ayudamos a las empresas a administrar y supervisar el funcionamiento de toda su red informática y servicios de comunicación digital.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
