--- a/software.html
+++ b/software.html
@@ -1,5 +1,5 @@
 ---
-layout: page_es
+layout: page
 title: AM Software | Software
 permalink: /software
 ---
@@ -211,7 +211,7 @@ permalink: /software
         <br><h2 class="mb20" style="color:#ffffff; font-size: 150%;">CONTÁCTANOS Y CUÉNTANOS SOBRE TU EMPRESA O PROYECTO Y TE BRINDAREMOS UNA COTIZACIÓN PERSONALIZADA.</h2><br>
       <!--<p>.</p>-->
         <div class="probootstrap-link-wrap">
-          <p><a href="/es/contacto" role="button" class="btn btn-primary">Cotizar</a></p>
+          <p><a href="/contacto" role="button" class="btn btn-primary">Cotizar</a></p>
         </div>
 </div>
 
