--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ permalink: /
             <div class="col-md-12 text-center">
               <div class="slides-text probootstrap-animate">
                 <!--<h2> </h2>-->
-                <p><a href="/es/software/" class="btn btn-primary"><strong>Software</strong></a></p>
+                <p><a href="/software" class="btn btn-primary"><strong>Software</strong></a></p>
               </div>
             </div>
           </div>
@@ -36,7 +36,7 @@ permalink: /
             <div class="col-md-12 text-center">
               <div class="slides-text probootstrap-animate">
                 <!--<h2> </h2>-->
-                <p><a href="/es/ecommerce/" class="btn btn-primary"><strong>E-Commerce</strong></a></p>
+                <p><a href="/ecommerce" class="btn btn-primary"><strong>E-Commerce</strong></a></p>
               </div>
             </div>
           </div>
@@ -48,7 +48,7 @@ permalink: /
             <div class="col-md-12 text-center">
               <div class="slides-text probootstrap-animate">
                 <!--<h2> </h2>-->
-                <p><a href="/es/web/" class="btn btn-primary"><strong>Web</strong></a></p>
+                <p><a href="/web" class="btn btn-primary"><strong>Web</strong></a></p>
               </div>
             </div>
           </div>
@@ -60,7 +60,7 @@ permalink: /
             <div class="col-md-12 text-center">
               <div class="slides-text probootstrap-animate">
                 <!--<h2> </h2>-->
-                <p><a href="/es/branding/" class="btn btn-primary"><strong>Branding</strong></a></p>
+                <p><a href="/branding" class="btn btn-primary"><strong>Branding</strong></a></p>
               </div>
             </div>
           </div>
