--- a/software.html
+++ b/software.html
@@ -39,7 +39,7 @@ permalink: /software
 <div class="row">
         <div class="col-md-4">
           <div class="service left-icon probootstrap-animate">
-
+<div class="text">
             <div class="icon">
               <i class="icon-display"></i>
             </div>
@@ -81,7 +81,7 @@ permalink: /software
       <div class="row">
         <div class="col-md-4">
           <div class="service left-icon probootstrap-animate">
-
+<div class="text">
             <div class="icon">
               <i class="icon-cloud"></i>
             </div>
@@ -123,7 +123,7 @@ permalink: /software
       <div class="row">
         <div class="col-md-4">
           <div class="service left-icon probootstrap-animate">
-
+<div class="text">
             <div class="icon">
               <i class="icon-stats-bars"></i>
             </div>
@@ -165,7 +165,7 @@ permalink: /software
       <div class="row">
         <div class="col-md-4">
           <div class="service left-icon probootstrap-animate">
-
+<div class="text">
             <div class="icon">
               <i class="icon-upload3"></i>
             </div>
