--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ permalink: /
 <div class="container">
         <div class="probootstrap-cta probootstrap-animate">
           <center>
-            <img style="height:420px;width:auto;" src="img/sprites/c1.png">
+            <img style="height:420px;max-width:100%;" src="img/sprites/c1.png">
           </center>
         <br><h2 class="mb20" style="color:#ffffff; font-size: 150%;">Conoce los beneficios que puede disfrutar tu empresa con un sitio de comercio electrónico y por qué al no tener uno está perdiendo a sus mejores clientes</h2><br>
       <!--<p>.</p>-->
@@ -228,27 +228,6 @@ permalink: /
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a target="_blank" href="http://collectible.world"><img src="img/projects/project-7.png" class="img-responsive img-border" alt=""></a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 probootstrap-animate">
-          <div class="probootstrap-card">
-            <div class="probootstrap-card-media">
-              <a target="_blank" href="http://supremefeeling.com"><img src="img/projects/project-8.png" class="img-responsive img-border" alt=""></a>
-            </div>
-        </div>
-      </div>
-        <div class="col-md-4 probootstrap-animate">
-          <div class="probootstrap-card">
-            <div class="probootstrap-card-media">
-              <a target="_blank" href="http://aesthetics.express"><img src="img/projects/project-9.png" class="img-responsive img-border" alt=""></a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 probootstrap-animate">
-          <div class="probootstrap-card">
-            <div class="probootstrap-card-media">
               <a target="_blank" href="http://moningsa.com"><img src="img/projects/project-10.png" class="img-responsive img-border" alt=""></a>
             </div>
           </div>
@@ -264,6 +243,27 @@ permalink: /
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
               <a target="_blank" href="http://nica.work"><img src="img/projects/project-12.png" class="img-responsive img-border" alt=""></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 probootstrap-animate">
+          <div class="probootstrap-card">
+            <div class="probootstrap-card-media">
+              <a target="_blank" href="http://collectible.world"><img src="img/projects/project-7.png" class="img-responsive img-border" alt=""></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 probootstrap-animate">
+          <div class="probootstrap-card">
+            <div class="probootstrap-card-media">
+              <a target="_blank" href="http://supremefeeling.com"><img src="img/projects/project-8.png" class="img-responsive img-border" alt=""></a>
+            </div>
+        </div>
+      </div>
+        <div class="col-md-4 probootstrap-animate">
+          <div class="probootstrap-card">
+            <div class="probootstrap-card-media">
+              <a target="_blank" href="http://aesthetics.express"><img src="img/projects/project-9.png" class="img-responsive img-border" alt=""></a>
             </div>
           </div>
         </div>
@@ -285,7 +285,7 @@ permalink: /
       <div class="container">
         <div class="probootstrap-cta probootstrap-animate">
           <center>
-            <img style="height:420px;width:auto;" src="img/sprites/c2.png">
+            <img style="height:420px;max-width:100%;" src="img/sprites/c2.png">
           </center>
         <br><h2 class="mb20" style="color:#ffffff; font-size: 150%;">Aprende más sobre lo que significa tener una prescencia en línea y entérate por qué en el año 2019 si una empresa no tiene un sitio web, está literalmente muerta.</h2><br>
       <!--<p>.</p>-->
@@ -908,7 +908,7 @@ permalink: /
 <div class="container">
         <div class="probootstrap-cta probootstrap-animate">
           <center>
-            <img style="height:420px;width:auto;" src="img/sprites/c1.png">
+            <img style="height:420px;max-width:100%;" src="img/sprites/c1.png">
           </center>
         <br><h2 class="mb20" style="color:#ffffff; font-size: 150%;">Conoce los beneficios que puede disfrutar tu empresa con un sitio de comercio electrónico y por qué al no tener uno está perdiendo a sus mejores clientes</h2><br>
       <!--<p>.</p>-->
