--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ permalink: /
     </div>
 <br><br><br>
 
-<div class="probootstrap-animate"><img src="img/software.png" style="width:100%;height:800px"></div>
+<div class="probootstrap-animate" style="width:100%;height:800px"><img src="img/software.png"></div>
 
   <section class="probootstrap-section">
     <div class="container">
@@ -498,7 +498,7 @@ permalink: /
   </div>
 
 <br><br><br>
-<div class="probootstrap-animate"><img src="img/ecommerce.png" style="width:100%;height:800px"></div>
+<div class="probootstrap-animate" style="width:100%;height:800px"><img src="img/ecommerce.png"></div>
 
   <section class="probootstrap-section">
     <div class="container">
@@ -651,7 +651,7 @@ permalink: /
   </div>
 
 <br><br><br>
-<div class="probootstrap-animate"><img src="img/web.png" style="width:100%;height:800px"></div>
+<div class="probootstrap-animate" style="width:100%;height:800px"><img src="img/web.png"></div>
   <section class="probootstrap-section">
     <div class="container">
       <div class="row">
@@ -756,7 +756,7 @@ permalink: /
   </div>
 
 <br><br><br>
-<div class="probootstrap-animate"><img src="img/branding.png" style="width:100%;height:800px"></div>
+<div class="probootstrap-animate" style="width:100%;height:800px"><img src="img/branding.png"></div>
    <section class="probootstrap-section">
     <div class="container">
       <div class="row">
