--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ permalink: /
         <br><h2 class="mb20" style="color:#ffffff; font-size: 150%;">Conoce los beneficios que puede disfrutar tu empresa con un sitio de comercio electrónico y por qué al no tener uno está perdiendo a sus mejores clientes</h2><br>
       <!--<p>.</p>-->
         <div class="probootstrap-link-wrap">
-        <center><p><a href="https://mailchi.mp/917b21d80251/amsoftware_subscribir" role="button" class="btn btn-primary">Descargar</a></p></center>
+        <center><p><a href="https://mailchi.mp/917b21d80251/amsoftware_subscribir" role="button" class="btn btn-subscribe">Descargar</a></p></center>
         </div>
       </div>
 </div>
@@ -290,7 +290,7 @@ permalink: /
         <br><h2 class="mb20" style="color:#ffffff; font-size: 150%;">Aprende más sobre lo que significa tener una prescencia en línea y entérate por qué en el año 2019 si una empresa no tiene un sitio web, está literalmente muerta.</h2><br>
       <!--<p>.</p>-->
         <div class="probootstrap-link-wrap">
-          <center><p><a href="https://mailchi.mp/917b21d80251/amsoftware_subscribir" role="button" class="btn btn-primary">Descargar</a></p></center>
+          <center><p><a href="https://mailchi.mp/917b21d80251/amsoftware_subscribir" role="button" class="btn btn-subscribe">Descargar</a></p></center>
         </div>
       </div>
     </div>
@@ -494,7 +494,7 @@ permalink: /
     <br><br>
       <h2 class="mb20">CUÉNTANOS SOBRE TU PROYECTO Y TE BRINDAREMOS <br> LA MEJOR SOLUCIÓN POSIBLE</h2>
       <p></p>
-      <center><p><a href="/software#cta" role="button" class="btn btn-primary">COTIZAR</a></p></center>
+      <center><p><a href="/software#cta" role="button" class="btn btn-subscribe">COTIZAR</a></p></center>
   </div>
 
 <br><br><br>
@@ -647,7 +647,7 @@ permalink: /
     <br><br>
       <h2 class="mb20">VENDE TUS PRODUCTOS O SERVICIOS EN LÍNEA <br> LAS 24 HORAS</h2>
       <p></p>
-      <center><p><a href="/ecommerce#pricing" role="button" class="btn btn-primary">COTIZAR</a></p></center>
+      <center><p><a href="/ecommerce#pricing" role="button" class="btn btn-subscribe">COTIZAR</a></p></center>
   </div>
 
 <br><br><br>
@@ -752,7 +752,7 @@ permalink: /
     <br><br>
       <h2 class="mb20">CREAMOS TU SITIO WEB Y PRESCENCIA ONLINE<br> EN CUESTIÓN DE HORAS</h2>
       <p></p>
-      <center><p><a href="/web#pricing" role="button" class="btn btn-primary">COTIZAR</a></p></center>
+      <center><p><a href="/web#pricing" role="button" class="btn btn-subscribe">COTIZAR</a></p></center>
   </div>
 
 <br><br><br>
@@ -899,7 +899,7 @@ permalink: /
     <br><br>
       <h2 class="mb20">LLEVA TU MARCA A UN NUEVO NIVEL <br> Y EXPERIMENTA LOS BENEFICIOS INMEDIATAMENTE</h2>
       <p></p>
-      <center><p><a href="/branding#pricing" role="button" class="btn btn-primary">COTIZAR</a></p></center>
+      <center><p><a href="/branding#pricing" role="button" class="btn btn-subscribe">COTIZAR</a></p></center>
   </div>
 
   <!-- END section cta -->
@@ -913,7 +913,7 @@ permalink: /
         <br><h2 class="mb20" style="color:#ffffff; font-size: 150%;">Conoce los beneficios que puede disfrutar tu empresa con un sitio de comercio electrónico y por qué al no tener uno está perdiendo a sus mejores clientes</h2><br>
       <!--<p>.</p>-->
         <div class="probootstrap-link-wrap">
-          <center><p><a href="https://mailchi.mp/917b21d80251/amsoftware_subscribir" role="button" class="btn btn-primary">Descargar</a></p></center>
+          <center><p><a href="https://mailchi.mp/917b21d80251/amsoftware_subscribir" role="button" class="btn btn-subscribe">Descargar</a></p></center>
         </div>
       </div>
 </div>
