--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ permalink: /
             <div class="col-md-12 text-center">
               <div class="slides-text probootstrap-animate">
                 <!--<h2> </h2>-->
-                <p><a href="/software" class="btn btn-primary"><strong>Software</strong></a></p>
+                <p><a href="/software" class="btn btn-subscribe"><strong>Software</strong></a></p>
               </div>
             </div>
           </div>
@@ -36,7 +36,7 @@ permalink: /
             <div class="col-md-12 text-center">
               <div class="slides-text probootstrap-animate">
                 <!--<h2> </h2>-->
-                <p><a href="/ecommerce" class="btn btn-primary"><strong>E-Commerce</strong></a></p>
+                <p><a href="/ecommerce" class="btn btn-subcribe"><strong>E-Commerce</strong></a></p>
               </div>
             </div>
           </div>
@@ -48,7 +48,7 @@ permalink: /
             <div class="col-md-12 text-center">
               <div class="slides-text probootstrap-animate">
                 <!--<h2> </h2>-->
-                <p><a href="/web" class="btn btn-primary"><strong>Web</strong></a></p>
+                <p><a href="/web" class="btn btn-subscribe"><strong>Web</strong></a></p>
               </div>
             </div>
           </div>
@@ -60,7 +60,7 @@ permalink: /
             <div class="col-md-12 text-center">
               <div class="slides-text probootstrap-animate">
                 <!--<h2> </h2>-->
-                <p><a href="/branding" class="btn btn-primary"><strong>Branding</strong></a></p>
+                <p><a href="/branding" class="btn btn-subscribe"><strong>Branding</strong></a></p>
               </div>
             </div>
           </div>
@@ -295,9 +295,18 @@ permalink: /
       </div>
     </div>
 <br><br><br>
-
-<div class="probootstrap-animate" style="width:100%;height:800px"><img src="img/software.png" style="width:150%;height:110%"></div>
-
+<ul class="slides">
+<li style="background-image: url(img/software.png);">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12 text-center">
+              <div class="slides-text probootstrap-animate">
+              </div>
+            </div>
+          </div>
+        </div>
+      </li>
+</ul>
   <section class="probootstrap-section">
     <div class="container">
       <div class="row">
@@ -498,8 +507,19 @@ permalink: /
   </div>
 
 <br><br><br>
-<div class="probootstrap-animate" style="width:100%;height:800px"><img src="img/ecommerce.png" style="width:150%;height:110%"></div>
 
+<ul class="slides">
+<li style="background-image: url(img/ecommerce.png);">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12 text-center">
+              <div class="slides-text probootstrap-animate">
+              </div>
+            </div>
+          </div>
+        </div>
+      </li>
+</ul>
   <section class="probootstrap-section">
     <div class="container">
       <div class="row">
@@ -651,7 +671,18 @@ permalink: /
   </div>
 
 <br><br><br>
-<div class="probootstrap-animate"  style="width:100%;height:800px"><img src="img/web.png" style="width:150%;height:110%"></div>
+<ul class="slides">
+<li style="background-image: url(img/web.png);">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12 text-center">
+              <div class="slides-text probootstrap-animate">
+              </div>
+            </div>
+          </div>
+        </div>
+      </li>
+</ul>
   <section class="probootstrap-section">
     <div class="container">
       <div class="row">
@@ -756,7 +787,18 @@ permalink: /
   </div>
 
 <br><br><br>
-<div class="probootstrap-animate" style="width:100%;height:800px"><img src="img/branding.png" style="width:150%;height:110%"></div>
+<ul class="slides">
+<li style="background-image: url(img/branding.png);">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12 text-center">
+              <div class="slides-text probootstrap-animate">
+              </div>
+            </div>
+          </div>
+        </div>
+      </li>
+</ul>
    <section class="probootstrap-section">
     <div class="container">
       <div class="row">
