--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ permalink: /
             <div class="col-md-12 text-center">
               <div class="slides-text probootstrap-animate">
                 <!--<h2> </h2>-->
-                <p><a href="/software" class="btn btn-subscribe"><strong>Software</strong></a></p>
+                <h2><a href="/software"><strong>Software</strong></a></h2>
               </div>
             </div>
           </div>
