--- a/index.html
+++ b/index.html
@@ -295,6 +295,7 @@ permalink: /
       </div>
     </div>
 <br><br><br>
+<section class="probootstrap-slider flexslider">
 <ul class="slides">
 <li style="background-image: url(img/software.png);">
         <div class="container">
@@ -307,6 +308,7 @@ permalink: /
         </div>
       </li>
 </ul>
+</section>
   <section class="probootstrap-section">
     <div class="container">
       <div class="row">
@@ -507,7 +509,7 @@ permalink: /
   </div>
 
 <br><br><br>
-
+<section class="probootstrap-slider flexslider">
 <ul class="slides">
 <li style="background-image: url(img/ecommerce.png);">
         <div class="container">
@@ -520,6 +522,7 @@ permalink: /
         </div>
       </li>
 </ul>
+</section>
   <section class="probootstrap-section">
     <div class="container">
       <div class="row">
@@ -671,7 +674,8 @@ permalink: /
   </div>
 
 <br><br><br>
-<ul class="slides">
+<section class="probootstrap-slider flexslider">
+  <ul class="slides">
 <li style="background-image: url(img/web.png);">
         <div class="container">
           <div class="row">
@@ -682,7 +686,7 @@ permalink: /
           </div>
         </div>
       </li>
-</ul>
+</ul></section>
   <section class="probootstrap-section">
     <div class="container">
       <div class="row">
@@ -787,7 +791,8 @@ permalink: /
   </div>
 
 <br><br><br>
-<ul class="slides">
+<section class="probootstrap-slider flexslider">
+  <ul class="slides">
 <li style="background-image: url(img/branding.png);">
         <div class="container">
           <div class="row">
@@ -799,6 +804,7 @@ permalink: /
         </div>
       </li>
 </ul>
+</section>
    <section class="probootstrap-section">
     <div class="container">
       <div class="row">
