--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ permalink: /
             <div class="col-md-12 text-center">
               <div class="slides-text probootstrap-animate">
                 <!--<h2> </h2>-->
-                <p><a href="/ecommerce" class="btn btn-subcribe"><strong>E-Commerce</strong></a></p>
+                <h2><a href="/ecommerce" style="color:#ffffff;"><strong>E-Commerce</strong></a></h2>
               </div>
             </div>
           </div>
@@ -48,7 +48,7 @@ permalink: /
             <div class="col-md-12 text-center">
               <div class="slides-text probootstrap-animate">
                 <!--<h2> </h2>-->
-                <p><a href="/web" class="btn btn-subscribe"><strong>Web</strong></a></p>
+                <h2><a href="/web"  style="color:#ffffff;"><strong>Web</strong></a></h2>
               </div>
             </div>
           </div>
@@ -60,7 +60,7 @@ permalink: /
             <div class="col-md-12 text-center">
               <div class="slides-text probootstrap-animate">
                 <!--<h2> </h2>-->
-                <p><a href="/branding" class="btn btn-subscribe"><strong>Branding</strong></a></p>
+                <h2><a href="/branding" style="color:#ffffff;"><strong>Branding</strong></a></h2>
               </div>
             </div>
           </div>
