--- a/contact.html
+++ b/contact.html
@@ -107,10 +107,10 @@ permalink: /contacto
         <h4>Otras Redes</h4>
         <ul class="stack-link">
               <li><a href="http://haycomercio.com">HayComercio.com</a></li>
-              <!--<li><a href="#">Blog</a></li>-->
-              <li><a href="#">Reddit.com</a></li>
+              <!--<li><a href="">Blog</a></li>-->
+              <li><a href="https://www.reddit.com/r/AMSoftware/">Reddit.com</a></li>
               <li><a href="#">Upwork.com</a></li>
-              <li><a href="#">Fiverr.com</a></li>
+              <li><a href="https://www.fiverr.com/ams_solutions">Fiverr.com</a></li>
         </ul>
 <hr>
 
