--- a/contact.html
+++ b/contact.html
@@ -48,9 +48,9 @@ permalink: /contacto
               <label for="message">Mensaje</label>
               <textarea cols="30" rows="10" class="form-control" id="message" name="message"></textarea>
             </div>
-            <div class="form-group">
-              <center><input type="submit" class="btn btn-primary" id="submit" name="submit" value="Enviar"></center>
-            </div>
+            <div class="probootstrap-link-wrap">
+          <p><a href="https://mailchi.mp/917b21d80251/amsoftware_subscribir" role="button" class="btn btn-primary">Descargar</a></p>
+        </div>
           </form>
 
         <div class="probootstrap-cta probootstrap-animate">
@@ -60,7 +60,7 @@ permalink: /contacto
         <br><h2 class="mb20" style="color:#ffffff; font-size: 150%;">Conoce los beneficios que puede disfrutar tu empresa con un sitio de comercio electrónico y por qué al no tener uno está perdiendo a sus mejores clientes</h2><br>
       <!--<p>.</p>-->
         <div class="probootstrap-link-wrap">
-          <p><a href="https://mailchi.mp/917b21d80251/amsoftware_subscribir" role="button" class="btn btn-primary">Descargar</a></p>
+          <p><a href="https://mailchi.mp/917b21d80251/amsoftware_subscribir" role="button" class="btn btn-primary">Enviar</a></p>
         </div>
       </div>
 
