--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@ permalink: /
             </div>
             <div class="text">
               <h3 class="heading">Acepte <br> Criptomonedas</h3></div><hr>
-              <p>Acepte las mayores criptomonedas del mundo como Bitcoin, Butcoin Cash, Ethereum, Litecoin, Ripple y muchas más de manera segura. </p>
+              <p>Acepte las mayores criptomonedas del mundo como Bitcoin, Bitcoin Cash, Ethereum, Litecoin, Ripple y muchas más de manera segura. </p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
           </div>
