--- a/ecommerce.html
+++ b/ecommerce.html
@@ -258,7 +258,7 @@ permalink: /ecommerce
         <br><h2 class="mb20" style="color:#ffffff; font-size: 150%;">Conoce los beneficios que puede disfrutar tu empresa con un sitio de comercio electrónico y por qué al no tener uno está perdiendo a sus mejores clientes</h2><br>
       <!--<p>.</p>-->
         <div class="probootstrap-link-wrap">
-          <p><a href="https://mailchi.mp/917b21d80251/amsoftware_subscribir" role="button" class="btn btn-primary">Descargar</a></p>
+          <p><a href="https://mailchi.mp/917b21d80251/amsoftware_subscribir" role="button" class="btn btn-subscribe">Descargar</a></p>
         </div>
       </div>
 </div>
